--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,45 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+* {
+  box-sizing: border-box;
+}
+
+.App {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100vw;
+  height: 100vh;
+  gap: 30px;
+}
+
+.header {
+  align-self: stretch;
+  display: flex;
+  justify-content: center;
+  background-color: black;
+  color: white;
+}
+
+.container{
+  display: flex;
+  justify-content: center;
+  align-content: flex-start;
+  flex-wrap: wrap;
+  gap: 20px;
+  width:auto;
+  height: 100%;
+  padding: 15px;
+  background-color: aliceblue;
+}
+
+.starship {
+  width: 350px;
+  height: 200px;
+  padding: 10px;
+  padding-top: 0px;
+  background-color: green;
+  border-radius: 30px;
+}
